# sandbox-detect-secrets

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflow/: build.yaml
