[tool.poetry]
name = "sandbox-detect-secrets"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "sandbox_detect_secrets" }]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
detect-secrets = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
